--- a/src/App.css
+++ b/src/App.css
@@ -90,3 +90,28 @@ body {
   box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2);
   transition-delay: 0s;
 }
+
+.container {
+  margin: 36px auto;
+  width: 100%;
+  max-width: 800px;
+}
+.search-label {
+  position: relative;
+}
+.container input {
+  width: 100%;
+  padding: 16px;
+  font-size: 36px;
+  font-style: italic;
+  color: #444;
+  box-sizing: border-box;
+  outline: none;
+}
+.search-icon {
+  position: absolute;
+  top: -10px;
+  font-size: 24px;
+  color: #555;
+  right: 18px;
+}
