--- a/src/App.css
+++ b/src/App.css
@@ -100,14 +100,15 @@ body {
   position: relative;
 }
 .container input {
-  width: 100%;
-  padding: 16px;
-  font-size: 36px;
-  font-style: italic;
-  color: #444;
-  box-sizing: border-box;
-  outline: none;
+    width: 50%;
+    font-size: 25px;
+    font-style: italic;
+    color: #444;
+    box-sizing: border-box;
+    outline: none;
+    margin-left: 250px;
 }
+
 .search-icon {
   position: absolute;
   top: -10px;
