--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,3 @@
-/* .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
-} */
-
 html,
 body {
   background: rgb(230, 230, 230);
@@ -48,12 +25,12 @@ body {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  background: #AFAFAF;
+  background: #afafaf;
 }
 
 .navbar > li > a {
   /* color: #4285f4; */
-  color: #218BCC;
+  color: #218bcc;
   text-decoration: none;
   padding: 24px;
   height: 16px;
@@ -61,13 +38,12 @@ body {
 
 .navbar > li > a.activeNavButton {
   /* background-color: #4285f4; */
-  background-color: #AEEA4F;
-  border: 2.5pt outset #218BCC;
+  background-color: #aeea4f;
+  border: 2.5pt outset #218bcc;
   /* color: white; */
-  color: #218BCC;
+  color: #218bcc;
   font-weight: bold;
 }
-
 
 .nav-buttons {
   margin: 16px 36px;
@@ -100,13 +76,13 @@ body {
   position: relative;
 }
 .container input {
-    width: 50%;
-    font-size: 25px;
-    font-style: italic;
-    color: #444;
-    box-sizing: border-box;
-    outline: none;
-    margin-left: 250px;
+  width: 50%;
+  font-size: 25px;
+  font-style: italic;
+  color: #444;
+  box-sizing: border-box;
+  outline: none;
+  margin-left: 250px;
 }
 
 .search-icon {
