--- a/src/components/Dashboards/InstrDashStylz.css
+++ b/src/components/Dashboards/InstrDashStylz.css
@@ -171,15 +171,15 @@
   background-color: #afafaf;
 }
 
-.main-header {
+.main-header-section {
   position: relative;
   display: flex;
   justify-content: space-between;
   height: 300px;
   color: white;
   background-size: 100%;
+  background-image: url("https://images.unsplash.com/photo-1470299067034-07c696e9ef07?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=696&q=80");
   background-position: center;
-  background-image: url("https://images.unsplash.com/photo-1470299067034-07c696e9ef07?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=996&q=80https://images.unsplash.com/photo-1470299067034-07c696e9ef07?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=996&q=80");
   margin-bottom: 20px;
 }
 
